# MRTeAm

./: LICENSE.md  README.md
docs/: Scenario-5.conf  auctioneer-fsm.dot  launch_commands.txt  map-strand-first-floor-restricted-5cm-v1.xcf  map-strand-first-floor-restricted-5cm-v2.xcf  map-strand-first-floor-restricted-5cm-v3.xcf  reallocation.txt  robot-controller-fsm.dot  robot-controller-states.dot  robot_1.rviz  robot_2.rviz  robot_3.rviz  simulation.rviz  smartlab_ugv_arena_v2.xcf  stat_summary.tex  target_points.txt  tasc-description.tex  turtlebot.rviz  turtlebot2.rviz
ros/: robot_1.rviz
ros/backup_recovery/: CMakeLists.txt  backup_plugin.xml  package.xml
ros/backup_recovery/include/backup_recovery/: backup_recovery.h
ros/backup_recovery/src/: backup_recovery.cpp
ros/hydro/hrteam_planner/: CMakeLists.txt  bgp_plugin.xml  package.xml
ros/hydro/hrteam_planner/include/hrteam_planner/: Edge.h  Graph.h  IPQ.h  Map.h  MapMarker.h  MapWallBuffer.h  Move.h  hrteam_planner.h
ros/hydro/hrteam_planner/src/: Graph.cpp  MapVirtualWall.cpp  MapWall.cpp
ros/mrta/: CMakeLists.txt  costmap_plugins.xml  package.xml  setup.py
ros/mrta/config/maps/: SEB15-MR-arena-clean.pgm  SEB15-MR-arena-clean.yaml  SEB15-arena-clean.pgm  SEB15-arena-clean.yaml  SEB15-arena.pgm  SEB15-arena.yaml  SEB15_MR_arena.pgm  SEB15_MR_arena.yaml  brooklyn_arena.yaml  central_london.yaml  croydon.yaml  croydon_roads.pgw  islington.yaml  islington_300dpi.yaml  map-strand-first-floor-5cm.yaml  map-strand-first-floor-restricted-5cm.yaml  map-strand-first-floor.yaml  map-strand-freight-5cm.pgm  map-strand-freight-5cm.yaml  smartlab_ugv_arena.yaml
ros/mrta/config/stage/: SEB15_MR_arena_3_robots_clustered.world  SEB15_MR_arena_3_robots_distributed.world  SEB15_arena_3_robots_clustered.world  SEB15_arena_3_robots_distributed.world  brooklyn_arena_3_robots_clustered.world  brooklyn_arena_3_robots_distributed.world  central_london.world  croydon.world  hokuyo.inc  islington-20160607002122.world  islington-20160702002428.world  islington-20161120003917.world  islington-20161126002422.world  islington-20161205002358.world  islington-scenario1.world  islington.world  sensors.inc  smartlab_ugv_arena_3_robots_clustered.world  smartlab_ugv_arena_3_robots_distributed.world  smartlab_ugv_arena_3_robots_distributed_A.world  smartlab_ugv_arena_3_robots_random_starts.world  smartlab_ugv_arena_3_robots_start1.world  smartlab_ugv_arena_3_robots_start2.world  smartlab_ugv_arena_3_robots_start3.world  smartlab_ugv_arena_3_robots_start4.world  smartlab_ugv_arena_3_robots_start5.world  smartlab_ugv_arena_3_robots_start6.world  smartlab_ugv_arena_dummy_robot.world  strand_first_floor_2_robots_clustered.world  strand_first_floor_3_robots_clustered.world  strand_restricted_3_robots_clustered.world  strand_restricted_3_robots_random.world  strand_restricted_dummy_robot.world  turtlebot.inc
ros/mrta/config/stage/worlds/: target_marker.inc
ros/mrta/include/mrta_obstacle_layer/: mrta_obstacle_layer.h
ros/mrta/include/mrta_planner_service/: mrta_planner_service.h
ros/mrta/launch/: mrta_master_relay_test.launch  single_master.launch  stage-3-robots.launch  stage_3_robots.launch  stage_3_robots_fkie.launch  stage_3_robots_rmq.launch  stage_dummy_robot.launch  turtlebot_no_ns.launch
ros/mrta/msg/: AnnounceSensorSweep.msg  Debug.msg  ExperimentEvent.msg  Pause.msg  SensorSweepTask.msg  Task.msg  TaskAward.msg  TaskBid.msg  TaskComplete.msg  TaskFailed.msg  TaskStatus.msg
ros/mrta/scripts/: kinbago_task_publisher  kinbago_task_publisher.py  master_relay.py  mrta_master_relay
ros/mrta/src/mrta/: __init__.py  file_db.py  mrta_planner_proxy.py  task.py
ros/mrta/src/mrta_obstacle_layer/: mrta_obstacle_layer.cpp
ros/mrta/src/mrta_planner_service/: mrta_planner_service.cpp
ros/mrta_dwa_local_planner/: CMakeLists.txt  blp_plugin.xml  package.xml
ros/mrta_dwa_local_planner/cfg/: MRTADWAPlanner.cfg
ros/mrta_dwa_local_planner/include/mrta_dwa_local_planner/: dwa_planner.h  dwa_planner_ros.h
ros/mrta_dwa_local_planner/src/: dwa_planner.cpp  dwa_planner_ros.cpp
ros/mrta_robot_controller/: CMakeLists.txt  package.xml  robot_controller.py
ros/mrta_robot_controller/launch/: move_base_generic.launch  move_base_generic1.launch  move_base_generic2.launch  move_base_generic3.launch  move_base_generic_fkie.launch  move_base_generic_rmq.launch  robot_controller.launch  turtlebot.launch  turtlebot3_fkie.launch  turtlebot3_no_ns_fkie.launch  turtlebot3_xd.launch  turtlebot_no_ns.launch  turtlebot_no_ns_fkie.launch  turtlebot_no_ns_rmq.launch
ros/mrta_robot_controller/launch/include/turtlebot/: amcl_no_ns.launch.xml  move_base.launch.xml  move_base_no_ns.launch.xml
ros/mrta_robot_controller/param/move_base_generic/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  mrta_dwa_local_planner_params.yaml
ros/mrta_robot_controller/param/move_base_generic/worlds/: dummy.inc  turtlebot.inc
ros/mrta_robot_controller/param/turtlebot/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
ros/mrta_robot_controller/scripts/: interact@byron  mrta_robot_controller  mrta_robot_controller_test
ros/mrta_test/: CMakeLists.txt  package.xml
ros/mrta_test/launch/: mrta_test1.launch  mrta_test2.launch  mrta_test3.launch
ros/multirobot_common/: package.xml  setup.py
ros/multirobot_common/msg/: Identify.msg  TaskAward.msg  TaskComplete.msg
scripts/: call_planner.py  convert_task_files_to_db.py  launch  launch.sh  launch_auctioneer  launch_chadwick.sh  launch_chadwick_test.sh  launch_experiment.py  launch_experiment_physical.py  launch_experiment_singlemaster.py  launch_experiments.py  launch_robot  launch_robot_0  launch_robot_1  launch_robot_2  launch_singlemaster.sh  launch_singlemaster_chadwick.sh  launch_singlemaster_manual_starts_tasks.sh  launch_singlemaster_tasc.sh  (+25 more)
(+9363 files in other folders)
