<?xml version="1.0"?>
<package>
  <name>robot_controller</name>
  <version>0.0.1</version>
  <description>Implements bidding and goal-choosing/seeking behavior.</description>

  <maintainer email="eric.schneider@liverpool.ac.uk">Eric Schneider</maintainer>
  <author email="eric.schneider@liverpool.ac.uk">Eric Schneider</author>
  <license>MIT</license>
  <url type="website">https://github.com/nitsuga/multirobot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
