<?xml version="1.0"?>
<package>
  <name>multirobot_common</name>
  <version>0.0.1</version>
  <description>Definitions for classes and messages common to many multirobot packages.</description>

  <maintainer email="eric.schneider@liverpool.ac.uk">Eric Schneider</maintainer>
  <author email="eric.schneider@liverpool.ac.uk">Eric Schneider</author>
  <license>MIT</license>
  <url type="website">https://github.com/nitsuga/multirobot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>


